feat: Upgrade to Spring Boot 3.3.11 is performed. Project version is changed to 1.0.0-SNAPSHOT. Bump dependencies: undertow to 2.3.21.Final, netty to 4.1.125.Final, guava to 32.0.1-jre, commons-lang3 to 3.18.0. Bump ATP libraries versions: atp-auth to 2.0.0-SNAPSHOT, atp-common to 1.0.0-SNAPSHOT.