@@ -22,9 +22,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-import javax.jms.JMSException;
-import javax.jms.TextMessage;
-
 import org.apache.activemq.junit.EmbeddedActiveMQBroker;
 import org.junit.ClassRule;
 import org.junit.Test;
@@ -40,6 +37,8 @@ import org.springframework.boot.test.mock.mockito.SpyBean;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.junit4.SpringRunner;
 
+import jakarta.jms.JMSException;
+import jakarta.jms.TextMessage;
 import lombok.extern.slf4j.Slf4j;
 
 @RunWith(SpringRunner.class)
@@ -168,7 +167,7 @@ public class MultiTenantJmsInterceptorTest {
     }
 
     private void fail() {
-        Exception exception = exceptionHolder.get(0);
+        Exception exception = exceptionHolder.getFirst();
         exceptionHolder.clear();
         if (exception != null) {
             throw new RuntimeException(exception.getMessage());
